# claws

./: .claws.example.json  .gitignore  PLAN.md  README.md  pyproject.toml
.claude/: settings.json  statusline-command.sh
.claude-plugin/: marketplace.json
.github/workflows/: auto-merge.yml  move-to-approved.yml
claws/: config.py  main.py
claws/commands/: destroy.py  init.py  setup_anthropic.py  setup_github.py  setup_telegram.py  setup_wizard.py  status.py
docs/: oauth-spike.md
openclaw/: openclaw.json.j2
openclaw/skills/github-poller/: skill.md
openclaw/skills/pr-watcher/: skill.md
plugins/claws/: README.md
plugins/claws/.claude-plugin/: plugin.json
plugins/claws/skills/init-project/: SKILL.md  constitution-default.md
plugins/claws/skills/plan/: SKILL.md
plugins/claws/skills/work-on-pending/: SKILL.md
plugins/claws/skills/work-on-task/: SKILL.md
skills/poll-project/: skill.md
skills/project-planner/: skill.md
skills/project-task/: skill.md
specs/memory/: constitution.md
terraform/: main.tf  outputs.tf  user_data.sh  variables.tf
tests/: test_approved_status_wiring.py  test_init_command.py  test_poll_project_skill_md.py  test_pr_watcher_skill_md.py  test_pr_watcher_wiring.py  test_project_config.py  test_project_planner_skill_md.py  test_project_task_skill_approved_inputs.py  test_setup_github_approved.py  test_setup_wizard.py  test_skill_md.py  test_status.py
