[project]
name = "claws"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "boto3>=1.34",
  "jinja2>=3.1",
  "rich>=13",
]

[project.scripts]
claws = "claws.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
